# Averera

./: README.md
Carla_simulation_ros_integration/: readme.md
Lane Detection/: Final Draft.ipynb
Object Detection/: readme.md  yolo.py  yolo_video.py
Shell_simulation_node/: CMakeLists.txt  package.xml
Shell_simulation_node/launch/: shell_simulation.launch
Shell_simulation_node/src/: shell_simulation_node.cpp
