<?xml version="1.0"?>
<package format="2">
  <name>shell_simulation</name>
  <version>0.0.0</version>
  <description>The shell_simulation package</description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>

  <license>TODO</license>

  <author email="preed@swri.org">P. J. Reed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
</package>
